# wenchi-map

./: README.md
data/: .gitignore
src/poles_map/: CMakeLists.txt  package.xml
src/poles_map/config/: poles_detect.xml  poles_map.xml
src/poles_map/launch/: poles_detect.launch  poles_map.launch
src/poles_map/src/: global_poles_map.cpp  poles_mutlistable.cpp  poles_mutlistable.h
src/robo_slam/: CMakeLists.txt  package.xml
src/robo_slam/config/: robo_loopping.xml  robo_map_generating.xml  robo_mapping.xml
src/robo_slam/doc/: developer_readme.md
src/robo_slam/include/: robo_loopping.h  robo_mapping.h
src/robo_slam/launch/: map_generate_node.launch  robo_loopping.launch  robo_mapping.launch  save_single_lidar.launch  save_single_lidar_rosbag.launch
src/robo_slam/rviz/: robo_mapping.rviz
src/robo_slam/src/: local_precise.cpp  map_generate_node.cpp  map_process_pub.cpp  robo_loopping.cpp  robo_mapping.cpp  save_single_frame_lidar.cpp
src/robo_slam/test/: robo_loopping_node.cpp  robo_mapping_node.cpp  xml_generate_node.cpp
src/rslidar/rslidar_pointcloud/data/: ChannelNum.csv  curves.csv
src/rslidar/rslidar_pointcloud/data/LM108/: angle.csv
src/rslidar/rslidar_pointcloud/data/LM169/: ChannelNum.csv  angle.csv  curves.csv  curves_1.75.csv
