<?xml version="1.0"?>
<package>
  <name>robo_slam</name>
  <version>0.0.0</version>
  <description>The robo_slam package</description>
  <maintainer email="zyy@todo.todo">zyy</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>runtime_manager</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>velodyne_pointcloud</build_depend>
  
  <run_depend>runtime_manager</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>velodyne_pointcloud</run_depend>
  
  <export>
  </export>
</package>

